[project]
name = "recipes"
version = "0.1.0"
description = ""
authors = [{ name = "Your Name", email = "you@example.com" }]
readme = "README.md"
requires-python = ">=3.13,<3.15"
dependencies = [
    "langgraph (==1.0.5)",
    "langgraph-prebuilt (==1.0.5)",
    "langgraph-sdk (==0.3.1)",
    "langchain (==1.2.0)",
    "langchain-core (==1.2.5)",
    "langchain-community (==0.4.1)",
    "langchain-mistralai (==1.1.1)",
    "langchain-ollama (==1.0.1)",
    "langchain-openai (==1.1.6)",
    "langchain-chroma (==1.1.0)",
    "langchain-text-splitters (==1.1.0)",
    "chromadb (==1.4.0)",
    "sentence-transformers (==5.2.0)",
    "fastapi (==0.128.0)",
    "uvicorn (==0.40.0)",
    "streamlit (==1.52.2)",
    "ollama (==0.6.1)",
    "transformers (==5.0.0rc1)",
    "pydantic (==2.12.5)",
    "pydantic-settings (==2.12.0)",
    "python-dotenv (==1.1.1)",
    "rich (==14.2.0)",
    "pandas (==2.3.3)",
    "langchain-tavily (>=0.2.16,<0.3.0)",
    "tavily-python (>=0.7.17,<0.8.0)",
    "duckdb (>=1.4.3,<2.0.0)",
    "qdrant-client (>=1.16.2,<2.0.0)",
    "tiktoken (>=0.12.0,<0.13.0)",
    "pypdf (>=6.5.0,<7.0.0)",
    "langgraph-checkpoint-sqlite (>=3.0.1,<4.0.0)",
    "opencv-python (>=4.13.0.90,<5.0.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
